--- a/SLBr/WinUIStyleDictionary.xaml
+++ b/SLBr/WinUIStyleDictionary.xaml
@@ -3200,7 +3200,7 @@ Margin="{TemplateBinding Padding}"/>
                             <RowDefinition x:Name="RowDefinition2" Height="*"/>
                         </Grid.RowDefinitions>
                         <Border x:Name="InsertIndicator" Width="2.5" Background="{StaticResource IndicatorBrush}" Visibility="Collapsed" HorizontalAlignment="Left" VerticalAlignment="Stretch" CornerRadius="1.5"/>
-                        <WinUI:TabPanel Margin="5" x:Name="HeaderPanel" Panel.ZIndex="1" AllowDrop="True" KeyboardNavigation.TabIndex="1" Grid.Row="0" IsItemsHost="true" Background="Transparent" DragOver="HeaderPanel_DragOver" DragLeave="HeaderPanel_DragLeave" Drop="HeaderPanel_Drop"/>
+                        <WinUI:TabPanel WindowChrome.IsHitTestVisibleInChrome="True" Margin="5,5,150,5" x:Name="HeaderPanel" Panel.ZIndex="1" AllowDrop="True" KeyboardNavigation.TabIndex="1" Grid.Row="0" IsItemsHost="true" Background="Transparent" DragOver="HeaderPanel_DragOver" DragLeave="HeaderPanel_DragLeave" Drop="HeaderPanel_Drop"/>
                         <Border Margin="0" x:Name="ContentPanel" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" KeyboardNavigation.TabNavigation="Local" KeyboardNavigation.DirectionalNavigation="Contained" KeyboardNavigation.TabIndex="2" Grid.Row="2">
                             <ContentPresenter x:Name="PART_SelectedContentHost" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" Margin="0" ContentSource="SelectedContent"/>
                         </Border>
