--- a/SLBr/WinUIStyleDictionary.xaml
+++ b/SLBr/WinUIStyleDictionary.xaml
@@ -2414,6 +2414,7 @@ Margin="{TemplateBinding Padding}"/>
     <controls:BrowserTabItemStyleSelector x:Key="VerticalBrowserTabItemStyleSelector" NavigationStyle="{StaticResource VerticalTab}" AddStyle="{StaticResource VerticalIconTabButton}" GroupStyle="{StaticResource VerticalTabGroupButton}"/>
 
     <Style TargetType="{x:Type TabItem}" x:Key="TabGroupButton">
+        <Setter Property="WindowChrome.IsHitTestVisibleInChrome" Value="True"/>
         <Setter Property="ContextMenu" Value="{StaticResource TabGroupContextMenu}"/>
         <Setter Property="Focusable" Value="False"/>
         <Setter Property="Height" Value="35"/>
@@ -2457,6 +2458,7 @@ Margin="{TemplateBinding Padding}"/>
     </Style>
 
     <Style TargetType="{x:Type TabItem}" x:Key="DefaultTab">
+        <Setter Property="WindowChrome.IsHitTestVisibleInChrome" Value="True"/>
         <Setter Property="ContextMenu" Value="{StaticResource TabItemContextMenu}"/>
         <Setter Property="Height" Value="35"/>
         <Setter Property="Width" Value="250"/>
@@ -2636,6 +2638,7 @@ Margin="{TemplateBinding Padding}"/>
 
     <Style TargetType="{x:Type TabItem}" BasedOn="{StaticResource DefaultTab}"></Style>
     <Style TargetType="{x:Type TabItem}" x:Key="IconTabButton">
+        <Setter Property="WindowChrome.IsHitTestVisibleInChrome" Value="True"/>
         <Setter Property="ContextMenu" Value="{StaticResource AddTabContextMenu}"/>
         <Setter Property="Height" Value="35"/>
         <Setter Property="Width" Value="35"/>
@@ -2692,6 +2695,7 @@ Margin="{TemplateBinding Padding}"/>
         </Setter>
     </Style>
     <Style TargetType="{x:Type TabItem}" x:Key="VerticalTab">
+        <Setter Property="WindowChrome.IsHitTestVisibleInChrome" Value="True"/>
         <Setter Property="ContextMenu" Value="{StaticResource TabItemContextMenu}"/>
         <Setter Property="Height" Value="40"/>
         <Setter Property="Width" Value="Auto"/>
@@ -2832,6 +2836,7 @@ Margin="{TemplateBinding Padding}"/>
         </Style.Triggers>
     </Style>
     <Style TargetType="{x:Type TabItem}" x:Key="VerticalTabGroupButton">
+        <Setter Property="WindowChrome.IsHitTestVisibleInChrome" Value="True"/>
         <Setter Property="ContextMenu" Value="{StaticResource TabGroupContextMenu}"/>
         <Setter Property="Focusable" Value="False"/>
         <Setter Property="Height" Value="30"/>
@@ -3200,7 +3205,7 @@ Margin="{TemplateBinding Padding}"/>
                             <RowDefinition x:Name="RowDefinition2" Height="*"/>
                         </Grid.RowDefinitions>
                         <Border x:Name="InsertIndicator" Width="2.5" Background="{StaticResource IndicatorBrush}" Visibility="Collapsed" HorizontalAlignment="Left" VerticalAlignment="Stretch" CornerRadius="1.5"/>
-                        <WinUI:TabPanel WindowChrome.IsHitTestVisibleInChrome="True" Margin="5,5,175,5" x:Name="HeaderPanel" Panel.ZIndex="1" AllowDrop="True" KeyboardNavigation.TabIndex="1" Grid.Row="0" IsItemsHost="true" Background="Transparent" DragOver="HeaderPanel_DragOver" DragLeave="HeaderPanel_DragLeave" Drop="HeaderPanel_Drop"/>
+                        <WinUI:TabPanel WindowChrome.IsHitTestVisibleInChrome="False" Margin="5,5,175,5" x:Name="HeaderPanel" Panel.ZIndex="1" AllowDrop="True" KeyboardNavigation.TabIndex="1" Grid.Row="0" IsItemsHost="true" Background="Transparent" DragOver="HeaderPanel_DragOver" DragLeave="HeaderPanel_DragLeave" Drop="HeaderPanel_Drop"/>
                         <Border Margin="0" x:Name="ContentPanel" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" KeyboardNavigation.TabNavigation="Local" KeyboardNavigation.DirectionalNavigation="Contained" KeyboardNavigation.TabIndex="2" Grid.Row="2">
                             <ContentPresenter x:Name="PART_SelectedContentHost" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" Margin="0" ContentSource="SelectedContent"/>
                         </Border>
