--- a/SLBr/Pages/Browser.xaml
+++ b/SLBr/Pages/Browser.xaml
@@ -271,8 +271,8 @@
                     </WinUI:DropDownButton>
                     <WinUI:PopupButton BorderThickness="0" Visibility="Collapsed" x:Name="TranslateButton" DockPanel.Dock="Right" Margin="0,0,5,0" Style="{StaticResource ToolBarPopupIconButton}" ToolTip="Translate" Content="&#xE8C1;">
                         <WinUI:PopupButton.PopupContent>
-                            <Border Width="250" Background="{StaticResource PrimaryBrush}" BorderBrush="{StaticResource BorderBrush}" BorderThickness="1" CornerRadius="5" Padding="10">
-                                <Grid>
+                            <Border Width="250" Background="{StaticResource PrimaryBrush}" BorderBrush="{StaticResource BorderBrush}" BorderThickness="1" CornerRadius="5">
+                                <Grid Margin="10">
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="Auto"/>
                                         <RowDefinition Height="*"/>
@@ -644,8 +644,8 @@
             <GridSplitter x:Name="SideBarRowSplitterTop" Visibility="Collapsed" Grid.Column="1" Grid.Row="0" Height="5" Background="Transparent" HorizontalAlignment="Stretch" VerticalAlignment="Bottom"/>
             <GridSplitter x:Name="SideBarRowSplitterBottom" Visibility="Collapsed" Grid.Column="1" Grid.Row="2" Height="5" Background="Transparent" HorizontalAlignment="Stretch" VerticalAlignment="Top"/>
 
-            <Grid Grid.Row="1" Grid.Column="1" IsHitTestVisible="False" Focusable="False" x:Name="StatusBar" Margin="5,37.5" VerticalAlignment="Bottom">
-                <Popup SnapsToDevicePixels="True" x:Name="StatusBarPopup" Placement="RelativePoint" IsHitTestVisible="False" Focusable="False" AllowsTransparency="True" IsOpen="False" PopupAnimation="Fade">
+            <Grid Grid.Row="1" Grid.Column="1" IsHitTestVisible="False" Focusable="False" Margin="5,37.5" VerticalAlignment="Bottom">
+                <Popup SnapsToDevicePixels="True" x:Name="StatusBubblePopup" Placement="RelativePoint" IsHitTestVisible="False" Focusable="False" AllowsTransparency="True" IsOpen="False" PopupAnimation="Fade">
                     <Border Background="{StaticResource PrimaryBrush}" IsHitTestVisible="False" Focusable="False" BorderThickness="1" BorderBrush="{StaticResource BorderBrush}" CornerRadius="5">
                         <Grid IsHitTestVisible="False" Focusable="False" MaxWidth="300">
                             <TextBlock IsHitTestVisible="False" x:Name="StatusMessage" Margin="7.5" FontFamily="None" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap" Foreground="{StaticResource FontBrush}"/>
