--- a/SLBr/Pages/SettingsPage.xaml
+++ b/SLBr/Pages/SettingsPage.xaml
@@ -673,7 +673,7 @@
                         <GroupBox Margin="0,0,0,10">
                             <StackPanel>
                                 <CheckBox Margin="0,0,0,10" x:Name="SpellCheckCheckBox" Width="Auto" Click="SpellCheckCheckBox_Click" Content="Check for spelling errors"/>
-                                <DockPanel Margin="0,0,0,10">
+                                <DockPanel Margin="0">
                                     <TextBlock VerticalAlignment="Center" Text="Spellcheck provider"/>
                                     <ComboBox IsEnabled="{Binding ElementName=SpellCheckCheckBox, Path=IsChecked, TargetNullValue=False}" x:Name="SpellcheckProviderComboBox" Width="200px" VerticalAlignment="Center" SelectedIndex="0" DockPanel.Dock="Right" HorizontalAlignment="Right" SelectionChanged="SpellcheckProviderComboBox_SelectionChanged">
                                         <ComboBoxItem>Basic</ComboBoxItem>
@@ -683,6 +683,22 @@
                                         <ComboBoxItem>Yandex</ComboBoxItem>
                                     </ComboBox>
                                 </DockPanel>
+                                <TextBlock Margin="0,10,0,0" FontSize="10" Foreground="{StaticResource GrayBrush}">Powered by <Hyperlink x:Name="SpellcheckAttribution" RequestNavigate="Hyperlink_RequestNavigate"></Hyperlink>
+                                    <TextBlock.Style>
+                                        <Style TargetType="TextBlock">
+                                            <Setter Property="Visibility" Value="Visible"/>
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding ElementName=SpellcheckProviderComboBox, Path=SelectedIndex}" Value="0">
+                                                    <Setter Property="Visibility" Value="Collapsed"/>
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </TextBlock.Style>
+                                </TextBlock>
+                            </StackPanel>
+                        </GroupBox>
+                        <GroupBox Margin="0,0,0,10">
+                            <StackPanel>
                                 <DockPanel>
                                     <TextBlock VerticalAlignment="Center" Text="Translation provider"/>
                                     <ComboBox x:Name="TranslationProviderComboBox" Width="200px" VerticalAlignment="Center" SelectedIndex="0" DockPanel.Dock="Right" HorizontalAlignment="Right" SelectionChanged="TranslationProviderComboBox_SelectionChanged">
